set fix sizes (just for avoid jumping in demo)

--- a/app/res/scss/components/grid.scss
+++ b/app/res/scss/components/grid.scss
@@ -22,7 +22,7 @@
 		/*color: #2f3538;*/
 		/*font-weight: normal;*/
 		font-weight: bold;
-		height: 41px;
+		height: 43px;
 		padding: 0;
 		/*position: relative;*/
 		/*border-width: 1px 0 0 1px;*/
